feat: make app fullscreen on the apk
This commit adds a tag in the AndroidManifest file that should
supposedly make the app be in fullscreen when using the APK.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
     <application
         android:usesCleartextTraffic="false"
         android:label="strive"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+        >
 
         <meta-data
             android:name="com.google.android.geo.AIzaSyCEhgdrq6tfUEErN326j50qTIeV3uxzmDQ"
