--- a/package.json
+++ b/package.json
@@ -76,7 +76,9 @@
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.27.0",
     "react-test-renderer": "^18.3.1",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "expo-task-manager": "~12.0.3",
+    "expo-background-fetch": "~13.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
