--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@testing-library/react-native": "^12.8.1",
     "expo": "^52.0.9",
     "expo-auth-session": "~6.0.0",
+    "expo-blur": "^14.0.1",
     "expo-build-properties": "~0.13.1",
     "expo-camera": "~16.0.6",
     "expo-constants": "~17.0.3",
