--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@testing-library/react-native": "^12.8.1",
     "expo": "^52.0.9",
     "expo-auth-session": "~6.0.0",
+    "expo-background-fetch": "~13.0.3",
     "expo-build-properties": "~0.13.1",
     "expo-camera": "~16.0.6",
     "expo-constants": "~17.0.3",
@@ -47,6 +48,7 @@
     "expo-splash-screen": "~0.29.12",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.2",
+    "expo-task-manager": "~12.0.3",
     "expo-web-browser": "~14.0.1",
     "firebase": "^11.0.1",
     "firebase-admin": "^12.6.0",
@@ -63,6 +65,8 @@
     "react": "^18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-background-actions": "^4.0.1",
+    "react-native-background-fetch": "^4.2.7",
     "react-native-css-interop": "^0.1.18",
     "react-native-dotenv": "^3.4.11",
     "react-native-elements": "^3.4.3",
@@ -76,9 +80,7 @@
     "react-native-web": "~0.19.10",
     "react-router-dom": "^6.27.0",
     "react-test-renderer": "^18.3.1",
-    "uuid": "^11.0.3",
-    "expo-task-manager": "~12.0.3",
-    "expo-background-fetch": "~13.0.3"
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
